@@ -54,3 +54,5 @@
 - Created TaskGUI (debug further)
 8-18-20:
 - Fixed bug in pomo where left button would say "skip" when break timer finished
+8-22-20:
+- Created method to record the time spent on an activity in seconds.
